--- a/overseas/index_sale.html
+++ b/overseas/index_sale.html
@@ -333,7 +333,7 @@
         <div class="wrap-flr flr6">
             <a href="javascript:void(0)" class="href-map" id="flr6"></a>
             <div class="flr-hd wrap-990">
-                <i class="icon"></i>
+                <i class="icon"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-icon" target="_blank" title="more"></a></i>
                 <h2>CANIS,a new women's clothing brand, which is founded in 2014 in China. The product include women's
                     dress, leggings, swimwear and kids' clothing. Bikini set is our main product. We will offer you beautifu
                     bikinis with special design and good quality, makes you more charming and attracting.</h2>
@@ -347,11 +347,11 @@
             </div>
             <!-- S flr-ft -->
             <div class="flr-ft wrap-990">
-                <a href="http://en.jd.com/search?sellerName=ANDA%2BLUMEN&seller=21" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
+                <a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-more" target="_blank" title="more" data-text="MORE&nbsp&gt;">MORE&nbsp&gt;</a>
             </div>
             <!-- E flr-ft -->
             <!-- S flr-extra -->
-            <div class="flr-extra"><a href="http://en.jd.com/search?sellerName=ANDA%2BLUMEN&seller=21" class="href-flr-extra" target="_blank" title="more"></a></div>
+            <div class="flr-extra"><a href="http://en.jd.com/search?category=&keywords=LUMINTOP&categoryName=All%2520Categories" class="href-flr-extra" target="_blank" title="more"></a></div>
             <!-- E flr-extra -->
         </div>
         <!-- E flr6 -->
@@ -598,13 +598,13 @@
                     "nameRussian": "Платье с растительными принтами",
                     "img": "tmp/goods1-1.jpg",
                     "price": "83.00",
-                    "oldPrice": "108.55",
-                    "discount": "24%"
+                    "oldPrice": "85.00",
+                    "discount": "2%"
                 },
                 {
                     "name": "Bird Print Lace Dress",
                     "link": "http://en.jd.com/product/BIRD-PRINT-LACE-DRESS_673810.html",
-                    "nameRussian": "кружевное платье с принтом птицы",
+                    "nameRussian": "Kружевное платье с принтом птиц.",
                     "img": "tmp/goods1-2.jpg",
                     "price": "71.00",
                     "oldPrice": "75.15",
@@ -622,7 +622,7 @@
                 {
                     "name": "Botanical Posies Maxi Skirt",
                     "link": "http://en.jd.com/product/Yumi-Botanical-Posies-Maxi-Skirt_679416.html",
-                    "nameRussian": "Maxi платье с ботаническими цветами",
+                    "nameRussian": "Maxi юбка с ботаническими цветами.",
                     "img": "tmp/goods1-4.jpg",
                     "price": "83.00",
                     "oldPrice": "108.55",
@@ -642,8 +642,8 @@
                     "link": "http://en.jd.com/product/YUMI-BUTTERFLY-AND-MAP-PRINT-DRESS_673809.html",
                     "nameRussian": " Платье с растительными принтами",
                     "img": "tmp/goods1-6.jpg",
-                    "price": "80.16",
-                    "oldPrice": "71.00",
+                    "price": "71.00",
+                    "oldPrice": "80.16",
                     "discount": "11%"
                 }
             ]
@@ -658,7 +658,7 @@
             'data': [
                 {
                     "name": "Sport Heart Rate Monitor Digital Watch",
-                    "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_669243.html",
+                    "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_674841.html",
                     "nameRussian": "Спортивные цифровые часы с монитором сердечной частоты",
                     "img": "tmp/goods2-1.jpg",
                     "price": "9.9",
@@ -667,7 +667,7 @@
                 },
                 {
                     "name": "Military Electronic Men Quartz Watch",
-                    "link": "http://en.jd.com/product/SKEMI-New-Fashion-Watches-Men-Solar-Sports-Watch-2-Time-Zone-Quartz-Digital-Led-Casual-Wristwatches_669139.html",
+                    "link": "http://en.jd.com/product/SKMEI-Brand-Watches-Men-Resin-Strap-Digital-Army-Military-Sport-Watch_669145.html",
                     "nameRussian": "Армейские электронные мужские кварц часы",
                     "img": "tmp/goods2-2.jpg",
                     "price": "9.9",
@@ -675,7 +675,7 @@
                     "discount": "55%"
                 },
                 {
-                    "name": "Solar Sport 2 Time Zone Digital LED Watch",
+                    "name": "Analog Digital 3ATM Full Steel Quartz Watch",
                     "link": "http://en.jd.com/product/SKEMI-New-Fashion-Watches-Men-Solar-Sports-Watch-2-Time-Zone-Quartz-Digital-Led-Casual-Wristwatches_669139.html",
                     "nameRussian": "Солнечные цифровые часы со светодиодами и 2мя часовыми зонами",
                     "img": "tmp/goods2-3.jpg",
@@ -795,16 +795,16 @@
                 {
                     "name": "Draco H3 Android Dongle TV Stick",
                     "link": "http://en.jd.com/product/Tronsmart-Draco-H3-Android-TV-Dongle-TV-Stick-Allwinner-H3-Quad-Core-1G-8G-HDMI-Bluetooth-4-0-4K-H-265-OTA-Android-4-4_667493.html",
-                    "nameRussian": " ТВ пульт Draco H3 Android",
+                    "nameRussian": "ТВ донгл Draco H3 Android",
                     "img": "tmp/goods4-2.jpg",
                     "price": "35.99",
                     "oldPrice": "50.99",
                     "discount": "29%"
                 },
                 {
-                    "name": "TS-CC2PC Qualcomm Certified Quick Charge 2.0 Two Port Car Charger ",
+                    "name": "TS-CC2PC Qualcomm Certified Charge 2.0 Two Port Car Charger",
                     "link": "http://en.jd.com/product/Tronsmart-TS-CC2PC-Qualcomm-Certified-Quick-Charge-2-0-Two-Port-Car-Charger-for-Samsung-Galaxy-S6-S6-Edge-HTC-M9-N_667753.html",
-                    "nameRussian": "Автомобильное зарядное устройство TS-CC2PC Qualcomm 2.0 два входа, сертифицирован, быстрозаряжаемый",
+                    "nameRussian": "Автомобильное зарядное устройство TS-CC2PC Qualcomm 2.0 два входа",
                     "img": "tmp/goods4-3.jpg",
                     "price": "11.99",
                     "oldPrice": "18.99",
@@ -813,7 +813,7 @@
                 {
                     "name": "Russian Version Tronsmart TSM-01 Air Mouse + Keyboard Remote control",
                     "link": "http://en.jd.com/product/Tronsmart-TSM-01-Russian-Version-Air-Mouse-Keyboard-Remote-control-for-TV-Box-PC-Motion-Sensing-Games_667886.html",
-                    "nameRussian": "Беспроводная мышь Tronsmart TSM-01 + Клавиатура Русская версия",
+                    "nameRussian": "Беспроводной пульт Tronsmart TSM-01 + Клавиатура.",
                     "img": "tmp/goods4-4.jpg",
                     "price": "13.59",
                     "oldPrice": "18.99",
@@ -831,7 +831,7 @@
                 {
                     "name": " TS-WC1Q QC2.0 Rapid USB Wall Charger - EU Plug ",
                     "link": "http://en.jd.com/product/Tronsmart-TS-WC1Q-QC2-0-1P-USB-Rapid-Wall-Charger-Stand-up-Fast-Wall-Charger-18W-EU-Plug_667749.html",
-                    "nameRussian": "Переносное USB зарядное устройство TS-WC1Q QC2.0, Евро розетка",
+                    "nameRussian": "Переносное USB зарядное устройство TS-WC1Q QC2.0.",
                     "img": "tmp/goods4-6.jpg",
                     "price": "13.99",
                     "oldPrice": "15.99",
@@ -848,16 +848,16 @@
             'tpl': 1,
             'data': [
                 {
-                    "name": "40L lightweight waterproof hiking backpack",
+                    "name": "40L Lightweight Waterproof hiking Backpack",
                     "link": "http://en.jd.com/product/Hongzhui-waterproof-mountain-climbing-package-with-40L-super-light_677445.html",
-                    "nameRussian": "Облегченный пешеходный водонепроницаемый рюкзак, объем 40л",
+                    "nameRussian": "Пешеходный водонепроницаемый рюкзак, объем 40л.",
                     "img": "tmp/goods5-1.jpg",
                     "price": "21.38",
                     "oldPrice": "65.00",
                     "discount": "49%"
                 },
                 {
-                    "name": "50L waterproof hiking pack",
+                    "name": "50L Waterproof Hiking pack",
                     "link": "http://en.jd.com/product/Hongzhui-with-50L-large-capacity-waterproof-outdoor-climbing-backpack_679035.html",
                     "nameRussian": "Водонепроницаемый пешеходный рюкзак, объем 50л",
                     "img": "tmp/goods5-2.jpg",
@@ -912,18 +912,18 @@
             'tpl': 1,
             'data': [
                 {
-                    "name": "Powerful LED Tactical Flashlight 1000 Lumens 6 Modes, Strobe, Big Side switch",
+                    "name": "LED Tactical Flashlight 1000 Lumens with 6 Modes",
                     "link": "http://en.jd.com/product/LUMINTOP-TD16-Powerful-Cree-LED-Tactical-Flashlight-1000-Lumens-with-Strobe-6-Modes-Waterproof-Torch-Light-With-Holster-Lanyard_670687.html",
-                    "nameRussian": "LED оперативный фонарь, мощность 1000 люмен, 6 режимов со стробом, узловой включатель",
+                    "nameRussian": "Светодиодный фонарь, мощность 1000 люмен.",
                     "img": "tmp/goods6-1.jpg",
                     "price": "75.98",
                     "oldPrice": "124.99",
                     "discount": "39%"
                 },
                 {
-                    "name": "Rechargeable LED Flashlight 900 Lumens With Charger USB Cable, Holster, Lanyard",
+                    "name": "Rechargeable LED Flashlight 900 Lumens ",
                     "link": "http://en.jd.com/product/LUMINTOP-EDC21-Rechargeable-LED-Flashlight-900-Lumens-With-Charger-USB-Cable-Holster-Lanyard-Cree-EDC-Torch-Light-With-Strobe_671115.html",
-                    "nameRussian": "Фонарь LED Перезаряжаемый, 900 люмен с USB зарядным кабелем, несессер, спусковой шнур",
+                    "nameRussian": "Светодиодный фонарь 900 люмен с USB зарядным кабелем.",
                     "img": "tmp/goods6-2.jpg",
                     "price": "49.98",
                     "oldPrice": "99.99",
@@ -931,7 +931,7 @@
                 },
 
                 {
-                    "name": "Just 2.8 Inches and 13g, Mini Colorful Keychain Flashlight 110 Lumens, 5 Colors, Waterproof",
+                    "name": "Mini Keychain Flashlight 110 Lumens, 5 Colors,Waterproof",
                     "link": "http://en.jd.com/product/LUMINTOP-WORM-AAA-Battery-Small-LED-Keychain-Flashlight-110-Lumens-Just-13g-28g-Portable-Waterproof-Colorful-Key-chain-Lights_673790.html",
                     "nameRussian": "Мини цветной фонарик Keychain 110 люмен, 5 цветов, водонепроницаемый, всего 2.8 дюймов, 13 г",
                     "img": "tmp/goods6-3.jpg",
@@ -940,9 +940,9 @@
                     "discount": "62%"
                 },
                 {
-                    "name": "Brightest LED Flashlight 2800 Lumens With Strobe, 3*Cree LED",
+                    "name": "LED Flashlight 2800 Lumens",
                     "link": "http://en.jd.com/product/LUMINTOP-PS03-Brightest-LED-Flashlight-2800-Lumens-3-Cree-LED-Waterproof-Torch-Light-With-Strobe-Black-Flashlight-With-Lanyard_671405.html",
-                    "nameRussian": "LED фонарь 2800 люмен со строб функцией, 3*Cree LED",
+                    "nameRussian": " Светодиодный фонарь  2800 люмен со строб функцией, 3*Cree LED",
                     "img": "tmp/goods6-4.jpg",
                     "price": "99.98",
                     "oldPrice": "173.99",
@@ -950,18 +950,18 @@
                 },
 
                 {
-                    "name": "Small AAA Keychain Flashlight , 110 Lumens 3 Modes  Waterproof, Just 3.2 Inches 15g",
+                    "name": "Small Keychain Flashlight , 110 Lumens 3 Modes  Waterproof, Just 3.2in. Long",
                     "link": "http://en.jd.com/product/LUMINTOP-Tool-AAA-Cree-LED-Small-Flashlight-Keychain-110-Lumens-3-Modes-Cheap-Waterproof-Keychain-Light-At-Just-3-2-Inches-15g_673365.html",
-                    "nameRussian": "Фонарь AAA Keychain , 110 Люмен, 6 режимов, Водонепроницаемый, всего 3.2 дюйма 15г",
+                    "nameRussian": "Фонарь 110 Люмен, 6 режимов, Водонепроницаемый",
                     "img": "tmp/goods6-5.jpg",
                     "price": "14.98",
                     "oldPrice": "25.99",
                     "discount": "42%"
                 },
                 {
-                    "name": "Small Bright LED Headlamp  With Headband, 7 Modes, 610 Lumens Waterproof",
+                    "name": "Small Bright LED Headlamp  7 Modes, 610 Lumens Waterproof",
                     "link": "http://en.jd.com/product/LUMINTOP-HL01-Small-Bright-Cree-LED-Headlamp-Flashlight-With-Headband-610-Lumens-Waterproof-Head-Torch-Light-with-Strobe_673383.html",
-                    "nameRussian": "Яркий светодиодный фонарик на голову, 7 режимов, 610 люмен, водонепроницаемый",
+                    "nameRussian": "Яркий светодиодный фонарик, 7 режимов, 610 люмен",
                     "img": "tmp/goods6-6.jpg",
                     "price": "39.98",
                     "oldPrice": "74.99",
@@ -994,12 +994,12 @@
     $(function(){
 
         var hdTitle = [
-            'В 1994 году Uttam and Clare Nepal начали продавать трикотажные изделия из Непала - родины Uttam в Камден маркете в Лондоне. В то модное время, этническая и ручная работа их коллекции сделала их очень популярными до конца 90х и брэнд быстро развивался. Компания заслужила себе репутацию благодаря живым краскам, принтам и акценту на мелкие детали, что быстро сделало ее узнаваемым во всем Мире как брэнд женской, детской одежды и аксессуаров. ',
-            'В инновационно-трендовое время, SKMEI непрерывно развивает новую технологию и переносит все ее достижения на дизайн классических уникальных часов. Наша цель это создание яркого образа красивых часов в сочетание с лучшим опытом и инновационными технологическими характеристиками. SKMEI включает  4 вида часов: модные часы, гелевые часы, стальные часы и алмазные часы. ',
-            ' Коллекция одежды в основном состоит из платьев, леггинсов, купальных костюмов и детской одежды. Бикини представляют основную линию одежды. Мы предлагаем вам модные бикини с необычным дизайном и хорошим качеством, делающим вас еще более привлекательной и красивой.',
+            'Yumi-Наш бизнес был начат более чем 18 лет назад, основатели которого Uttam and Clare Nepal. В 1994 году они начали продавать трикотажные изделия из Непала в Лондоне. В то модное время, этническая и ручная работа их коллекции сделала их очень популярными до конца 90х и брэнд быстро развивался. Компания заслужила себе репутацию благодаря живым краскам, принтам и акценту на мелкие детали, что быстро сделало ее узнаваемым во всем Мире как брэнд женской, детской одежды и аксессуаров.',
+            'SKME--живи лучшей жизнью.<br>С 7 августа 2010 года, SKMEI основной акцент поставил на спорт и креативность в часах.SKMEI непрерывно развивает новую технологию и переносит все ее достижения на дизайн уникальных часов. Наша цель это создание яркого образа красивых часов в сочетание с лучшим опытом и инновационными характеристиками. SKMEI включает  4 вида часов: модные часы, силиконовые часы, стальные часы и алмазные часы. ',
+            'CANIS--это новый брэнд женской одежды, который был основан в 2014 году в Китае.<br>Коллекция одежды в основном состоит из платьев, леггинсов, купальных костюмов и детской одежды. Бикини представляют основную линию одежды. Мы предлагаем вам модные бикини с необычным дизайном и хорошим качеством, делающим вас еще более привлекательной и красивой.',
             'Tronsmart брэнд замотивирован так, чтобы двигаться за пределы своих возможностей в каждом аспекте. На каждом этапе нашей компании, мы работаем для достижения нашей цели "Создание в Мире  развитого интеллектуально-технического стиля жизни". Мы делаем это для репутации, для развития энтузиазма в нас, а также мы заботимся о вашем опыте и навыках, приобретенных вместе с нами. ',
-            'Hongzhui брэнд был основан с целью "создания собственной китайской марки багажных сумок". Символ брэнда был взят из известной цитаты Гуан Я "Неуменьшенная сила навсегда". Лого символизирует совершенство, а название брэнда делает его узнаваемым из-за специальной арт формы, чтобы лого выглядело как натуральный шелк. Красный это цвет удачи в Китае, символизирующий торжество, сердечность и благородство Китая. ',
-            'LUMINTOP брэнд за последние 6 лет придерживается идеи внедрения технических новшеств и производства персональных и доступных по цене фонарей. Начиная с оперативных и уличных фонарей, подводных фонарей и  ламп, LUMINTOP обеспечит вас всем необходимым.  LUMINTOP надежный! Развлекательный! Качественные, практичные и износостойкие фонари. К нам поступает много заказов со всего мира, включая Американский торговый центр товаров для открытого воздуха ; Российский фонд боеприпасов; Немецкое подразделение полиции ; Армию жителей Панамы и противопожарное подразделение Сингапура. '
+            'Hongzhui брэнд был основан с целью "создания собственной китайской марки пешеходных сумок". Символ брэнда был взят из известной цитаты Гуан Я "Неуменьшенная сила навсегда". Лого символизирует совершенство, а название брэнда делает его узнаваемым из-за специальной арт формы, чтобы лого выглядело как натуральный шелк. Красный это цвет удачи в Китае, символизирующий торжество, сердечность и благородство Китая. ',
+            'LUMINTOP брэнд за последние 6 лет придерживается идеи внедрения технических новшеств и производства доступных по цене фонарей. LUMINTOP надежный! Развлекательный! Качественные, практичные и износостойкие фонари.'
         ]
         var lastTop = $(document).scrollTop();
         var floatTop = $('.float-top').height();
@@ -1029,7 +1029,7 @@
             $('#top').css({"right": 0});
         }
         $('.flr-hd h2').each(function(i,k){
-            $(k).text(hdTitle[i]);
+            $(k).html(hdTitle[i]);
         })
         var tTop = $(document).scrollTop();
         for(var i = 0;i<saleContent.length;i++){
