--- a/overseas/index_sale_e.html
+++ b/overseas/index_sale_e.html
@@ -598,13 +598,13 @@
                     "nameRussian": "Платье с растительными принтами",
                     "img": "tmp/goods1-1.jpg",
                     "price": "83.00",
-                    "oldPrice": "108.55",
-                    "discount": "24%"
+                    "oldPrice": "85.00",
+                    "discount": "2%"
                 },
                 {
                     "name": "Bird Print Lace Dress",
                     "link": "http://en.jd.com/product/BIRD-PRINT-LACE-DRESS_673810.html",
-                    "nameRussian": "кружевное платье с принтом птицы",
+                    "nameRussian": "Kружевное платье с принтом птиц.",
                     "img": "tmp/goods1-2.jpg",
                     "price": "71.00",
                     "oldPrice": "75.15",
@@ -622,7 +622,7 @@
                 {
                     "name": "Botanical Posies Maxi Skirt",
                     "link": "http://en.jd.com/product/Yumi-Botanical-Posies-Maxi-Skirt_679416.html",
-                    "nameRussian": "Maxi платье с ботаническими цветами",
+                    "nameRussian": "Maxi юбка с ботаническими цветами.",
                     "img": "tmp/goods1-4.jpg",
                     "price": "83.00",
                     "oldPrice": "108.55",
@@ -642,8 +642,8 @@
                     "link": "http://en.jd.com/product/YUMI-BUTTERFLY-AND-MAP-PRINT-DRESS_673809.html",
                     "nameRussian": " Платье с растительными принтами",
                     "img": "tmp/goods1-6.jpg",
-                    "price": "80.16",
-                    "oldPrice": "71.00",
+                    "price": "71.00",
+                    "oldPrice": "80.16",
                     "discount": "11%"
                 }
             ]
@@ -658,7 +658,7 @@
             'data': [
                 {
                     "name": "Sport Heart Rate Monitor Digital Watch",
-                    "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_669243.html",
+                    "link": "http://en.jd.com/product/SKMEI-Pulse-Heart-Rate-Counter-Calories-Monitor-Men-Women-Digital-Sports-Watch-Sphygmograph-Pulsometer-Pulse-Wave-Wristwatch_674841.html",
                     "nameRussian": "Спортивные цифровые часы с монитором сердечной частоты",
                     "img": "tmp/goods2-1.jpg",
                     "price": "9.9",
@@ -667,7 +667,7 @@
                 },
                 {
                     "name": "Military Electronic Men Quartz Watch",
-                    "link": "http://en.jd.com/product/SKEMI-New-Fashion-Watches-Men-Solar-Sports-Watch-2-Time-Zone-Quartz-Digital-Led-Casual-Wristwatches_669139.html",
+                    "link": "http://en.jd.com/product/SKMEI-Brand-Watches-Men-Resin-Strap-Digital-Army-Military-Sport-Watch_669145.html",
                     "nameRussian": "Армейские электронные мужские кварц часы",
                     "img": "tmp/goods2-2.jpg",
                     "price": "9.9",
@@ -675,7 +675,7 @@
                     "discount": "55%"
                 },
                 {
-                    "name": "Solar Sport 2 Time Zone Digital LED Watch",
+                    "name": "Analog Digital 3ATM Full Steel Quartz Watch",
                     "link": "http://en.jd.com/product/SKEMI-New-Fashion-Watches-Men-Solar-Sports-Watch-2-Time-Zone-Quartz-Digital-Led-Casual-Wristwatches_669139.html",
                     "nameRussian": "Солнечные цифровые часы со светодиодами и 2мя часовыми зонами",
                     "img": "tmp/goods2-3.jpg",
@@ -795,16 +795,16 @@
                 {
                     "name": "Draco H3 Android Dongle TV Stick",
                     "link": "http://en.jd.com/product/Tronsmart-Draco-H3-Android-TV-Dongle-TV-Stick-Allwinner-H3-Quad-Core-1G-8G-HDMI-Bluetooth-4-0-4K-H-265-OTA-Android-4-4_667493.html",
-                    "nameRussian": " ТВ пульт Draco H3 Android",
+                    "nameRussian": "ТВ донгл Draco H3 Android",
                     "img": "tmp/goods4-2.jpg",
                     "price": "35.99",
                     "oldPrice": "50.99",
                     "discount": "29%"
                 },
                 {
-                    "name": "TS-CC2PC Qualcomm Certified Quick Charge 2.0 Two Port Car Charger ",
+                    "name": "TS-CC2PC Qualcomm Certified Charge 2.0 Two Port Car Charger",
                     "link": "http://en.jd.com/product/Tronsmart-TS-CC2PC-Qualcomm-Certified-Quick-Charge-2-0-Two-Port-Car-Charger-for-Samsung-Galaxy-S6-S6-Edge-HTC-M9-N_667753.html",
-                    "nameRussian": "Автомобильное зарядное устройство TS-CC2PC Qualcomm 2.0 два входа, сертифицирован, быстрозаряжаемый",
+                    "nameRussian": "Автомобильное зарядное устройство TS-CC2PC Qualcomm 2.0 два входа",
                     "img": "tmp/goods4-3.jpg",
                     "price": "11.99",
                     "oldPrice": "18.99",
@@ -813,7 +813,7 @@
                 {
                     "name": "Russian Version Tronsmart TSM-01 Air Mouse + Keyboard Remote control",
                     "link": "http://en.jd.com/product/Tronsmart-TSM-01-Russian-Version-Air-Mouse-Keyboard-Remote-control-for-TV-Box-PC-Motion-Sensing-Games_667886.html",
-                    "nameRussian": "Беспроводная мышь Tronsmart TSM-01 + Клавиатура Русская версия",
+                    "nameRussian": "Беспроводной пульт Tronsmart TSM-01 + Клавиатура.",
                     "img": "tmp/goods4-4.jpg",
                     "price": "13.59",
                     "oldPrice": "18.99",
@@ -831,7 +831,7 @@
                 {
                     "name": " TS-WC1Q QC2.0 Rapid USB Wall Charger - EU Plug ",
                     "link": "http://en.jd.com/product/Tronsmart-TS-WC1Q-QC2-0-1P-USB-Rapid-Wall-Charger-Stand-up-Fast-Wall-Charger-18W-EU-Plug_667749.html",
-                    "nameRussian": "Переносное USB зарядное устройство TS-WC1Q QC2.0, Евро розетка",
+                    "nameRussian": "Переносное USB зарядное устройство TS-WC1Q QC2.0.",
                     "img": "tmp/goods4-6.jpg",
                     "price": "13.99",
                     "oldPrice": "15.99",
@@ -848,16 +848,16 @@
             'tpl': 1,
             'data': [
                 {
-                    "name": "40L lightweight waterproof hiking backpack",
+                    "name": "40L Lightweight Waterproof hiking Backpack",
                     "link": "http://en.jd.com/product/Hongzhui-waterproof-mountain-climbing-package-with-40L-super-light_677445.html",
-                    "nameRussian": "Облегченный пешеходный водонепроницаемый рюкзак, объем 40л",
+                    "nameRussian": "Пешеходный водонепроницаемый рюкзак, объем 40л.",
                     "img": "tmp/goods5-1.jpg",
                     "price": "21.38",
                     "oldPrice": "65.00",
                     "discount": "49%"
                 },
                 {
-                    "name": "50L waterproof hiking pack",
+                    "name": "50L Waterproof Hiking pack",
                     "link": "http://en.jd.com/product/Hongzhui-with-50L-large-capacity-waterproof-outdoor-climbing-backpack_679035.html",
                     "nameRussian": "Водонепроницаемый пешеходный рюкзак, объем 50л",
                     "img": "tmp/goods5-2.jpg",
@@ -912,18 +912,18 @@
             'tpl': 1,
             'data': [
                 {
-                    "name": "Powerful LED Tactical Flashlight 1000 Lumens 6 Modes, Strobe, Big Side switch",
+                    "name": "LED Tactical Flashlight 1000 Lumens with 6 Modes",
                     "link": "http://en.jd.com/product/LUMINTOP-TD16-Powerful-Cree-LED-Tactical-Flashlight-1000-Lumens-with-Strobe-6-Modes-Waterproof-Torch-Light-With-Holster-Lanyard_670687.html",
-                    "nameRussian": "LED оперативный фонарь, мощность 1000 люмен, 6 режимов со стробом, узловой включатель",
+                    "nameRussian": "Светодиодный фонарь, мощность 1000 люмен.",
                     "img": "tmp/goods6-1.jpg",
                     "price": "75.98",
                     "oldPrice": "124.99",
                     "discount": "39%"
                 },
                 {
-                    "name": "Rechargeable LED Flashlight 900 Lumens With Charger USB Cable, Holster, Lanyard",
+                    "name": "Rechargeable LED Flashlight 900 Lumens ",
                     "link": "http://en.jd.com/product/LUMINTOP-EDC21-Rechargeable-LED-Flashlight-900-Lumens-With-Charger-USB-Cable-Holster-Lanyard-Cree-EDC-Torch-Light-With-Strobe_671115.html",
-                    "nameRussian": "Фонарь LED Перезаряжаемый, 900 люмен с USB зарядным кабелем, несессер, спусковой шнур",
+                    "nameRussian": "Светодиодный фонарь 900 люмен с USB зарядным кабелем.",
                     "img": "tmp/goods6-2.jpg",
                     "price": "49.98",
                     "oldPrice": "99.99",
@@ -931,7 +931,7 @@
                 },
 
                 {
-                    "name": "Just 2.8 Inches and 13g, Mini Colorful Keychain Flashlight 110 Lumens, 5 Colors, Waterproof",
+                    "name": "Mini Keychain Flashlight 110 Lumens, 5 Colors,Waterproof",
                     "link": "http://en.jd.com/product/LUMINTOP-WORM-AAA-Battery-Small-LED-Keychain-Flashlight-110-Lumens-Just-13g-28g-Portable-Waterproof-Colorful-Key-chain-Lights_673790.html",
                     "nameRussian": "Мини цветной фонарик Keychain 110 люмен, 5 цветов, водонепроницаемый, всего 2.8 дюймов, 13 г",
                     "img": "tmp/goods6-3.jpg",
@@ -940,9 +940,9 @@
                     "discount": "62%"
                 },
                 {
-                    "name": "Brightest LED Flashlight 2800 Lumens With Strobe, 3*Cree LED",
+                    "name": "LED Flashlight 2800 Lumens",
                     "link": "http://en.jd.com/product/LUMINTOP-PS03-Brightest-LED-Flashlight-2800-Lumens-3-Cree-LED-Waterproof-Torch-Light-With-Strobe-Black-Flashlight-With-Lanyard_671405.html",
-                    "nameRussian": "LED фонарь 2800 люмен со строб функцией, 3*Cree LED",
+                    "nameRussian": " Светодиодный фонарь  2800 люмен со строб функцией, 3*Cree LED",
                     "img": "tmp/goods6-4.jpg",
                     "price": "99.98",
                     "oldPrice": "173.99",
@@ -950,18 +950,18 @@
                 },
 
                 {
-                    "name": "Small AAA Keychain Flashlight , 110 Lumens 3 Modes  Waterproof, Just 3.2 Inches 15g",
+                    "name": "Small Keychain Flashlight , 110 Lumens 3 Modes  Waterproof, Just 3.2in. Long",
                     "link": "http://en.jd.com/product/LUMINTOP-Tool-AAA-Cree-LED-Small-Flashlight-Keychain-110-Lumens-3-Modes-Cheap-Waterproof-Keychain-Light-At-Just-3-2-Inches-15g_673365.html",
-                    "nameRussian": "Фонарь AAA Keychain , 110 Люмен, 6 режимов, Водонепроницаемый, всего 3.2 дюйма 15г",
+                    "nameRussian": "Фонарь 110 Люмен, 6 режимов, Водонепроницаемый",
                     "img": "tmp/goods6-5.jpg",
                     "price": "14.98",
                     "oldPrice": "25.99",
                     "discount": "42%"
                 },
                 {
-                    "name": "Small Bright LED Headlamp  With Headband, 7 Modes, 610 Lumens Waterproof",
+                    "name": "Small Bright LED Headlamp  7 Modes, 610 Lumens Waterproof",
                     "link": "http://en.jd.com/product/LUMINTOP-HL01-Small-Bright-Cree-LED-Headlamp-Flashlight-With-Headband-610-Lumens-Waterproof-Head-Torch-Light-with-Strobe_673383.html",
-                    "nameRussian": "Яркий светодиодный фонарик на голову, 7 режимов, 610 люмен, водонепроницаемый",
+                    "nameRussian": "Яркий светодиодный фонарик, 7 режимов, 610 люмен",
                     "img": "tmp/goods6-6.jpg",
                     "price": "39.98",
                     "oldPrice": "74.99",
@@ -993,12 +993,12 @@
 <script>
     $(function(){
         var hdTitle = [
-            "In 1994 Uttam and Clare began selling knitwear from Uttam's home country of Nepal in Camden Market, London. The fashion at the time for hand-made ethnic clothing made their collection increasingly popular towards the end of the 1990s and the brand enjoyed considerable growth. The company acquired a reputation for its vibrant colours, quirky prints attention to detail and quickly became globally recognised for its eye-catching womenswear, childrenswear and accessories.",
-            "As 'inno-trendy timewear' ,SKMEI is constantly developing new technology and putting it into the design of a classic and unique watch.Our aim is to create more vivid images, beautiful watches, a better experience, and more technological capabilities.SKMEI has 4 types watch: Fashion watch, Gel Watch, Steel watch, and the Diamond watch.",
-            "Their clothing includes women's dresses, leggings, swimwear and kids' clothing. Our Bikini line is our main product. We offer you beautifu bikinis with special design and good quality, making you more charming and attractive.",
+            "Yumi was started over 18 years ago by its founders Uttam and Clare in Nepal.In 1994 Uttam and Clare began selling knitwear from Uttam's home country of Nepal in Camden Market, London. The company acquired a reputation for its vibrant colours, quirky prints attention to detail and quickly became globally recognised for its eye-catching womenswear, childrenswear and accessories." ,
+            "SKMEI--Live life better.<br>Since August 7, 2010,  SKMEI has focused on placing sport and creativity in a watch.SKMEI is constantly developing new technology and putting it into the design of a classic and unique watch. Our aim is to create more vivid images, beautiful watches, a better experience, and more technological capabilities.",
+            "CANIS--a new women's clothing brand, which was founded in 2014 in China.<br>Their clothing includes women's dresses, leggings, swimwear and kids' clothing. Our Bikini line is our main product. We offer you beautifu bikinis with special design and good quality, making you more charming and attractive.",
             "Tronsmart-We stay motivated to push ourselves beyond our limits in every aspect. In every phase of our company we work to accomplish our goal of “Creating the world’s most intelligent electronic lifestyle”. We are not doing this for fame, we do this for the passion inside all of us and because we care for your experience.",
             "Hongzhui -Hongzhui was founded with the purpose to 'build China's own brand of luggage.' The symbol of the brand was taken from a famous quote by Guang Ya saying 'undiminished vigor forever'. The Logo is a symbol of perfection and the brand name is recognizable from a special artform to make the logo look like fine silk. Red is the color of good luck in China, symbolizing the festivity, warmth, and generosity of China.",
-        "LUMINTOP has committed to innovate and manufacture personalized and cost-effective flashlights for the past 6 years. From tactical and outdoor flashlights, to dive lights, and headlamps, LUMINTOP has got you covered. LUMINTOP, Reliable ! Playable !With quality, practical and durable flashlights we have a lot of customized orders from all over the world like: America Outdoor Shopping Mall; Russia Munitions Merchant; the German Police Force; the Panamanian Army; and the Singapore Firefighting Force."];
+        "LUMINTOP has committed to innovate and manufacture personalized and cost-effective flashlights for the past 6 years. From tactical and outdoor flashlights, to dive lights, and headlamps, LUMINTOP has got you covered."];
         var lastTop = $(document).scrollTop();
         var floatTop = $('.float-top').height();
         var floatShowHeight = $('.wrap-bd').offset().top;
@@ -1027,7 +1027,7 @@
             $('#top').css({"right": 0});
         }
         $('.flr-hd h2').each(function(i,k){
-            $(k).text(hdTitle[i]);
+            $(k).html(hdTitle[i]);
         })
         var tTop = $(document).scrollTop();
         for(var i = 0;i<saleContent.length;i++){
